# spacepaperwork

./: .dockerignore  .env.docker.example  .env.example  .env.local.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  Procfile  README.md  all_checks_and_tests.sh  big_bang.sh  big_bang_migration.sh  clean_up.sh  clone_prod.sh  docker_managepy.sh  flip_gooseflock.sh  integration_test.sh  local.yml  manage.py  mypy.ini  parse_bot_spam.py  parse_items.py  parse_systems.py  pre_commit_checks.sh  pyproject.toml  pytest.ini  requirements.txt  reset_db.sh  run.sh  setup.cfg  test.yml  test_watcher.sh  tests.sh
.envs/.local/: .django  .postgres
.envs/.test/: .django  .postgres
.github/workflows/: main.yml
config/: adapters.py  admin.py  forms.py  middleware.py  public_urls.py  urls.py  wsgi.py
core/: admin.py  autocomplete.py  fields.py  forms.py  middleware.py  models.py  models.py.test  tables.py  urls.py  views.py
fixture_utils/: parse_bot_spam.py  parse_items.py  parse_old_db.py  parse_ships.py  parse_systems.py  scrape_for_character_data.sh  test
goldengoose/: settings.py  urls.py  wsgi.py
goosetools/: .env.example  adapters.py  app.json  asgi.py  settings.py  urls.py  utils.py  wsgi.py
loottracker/: apps.py  urls.py  views.py
prod_setup_examples/: crontab.example  goosetools.service.example  gunicorn_config.py.example  logging.conf.example
requirements/: base.txt  local.txt  prod.txt
scripts/: fixup_char_db.py  make_user_admin.py  parse_bot_spam.py  parse_items.py  scrape_for_character_data.sh
templates/: home.html
(+687 files in other folders)
